--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "devDependencies": {
     "@ryanpromax/eslint-config": "^2.0.0",
+    "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.0",
     "eslint": "^8.12.0",
     "typescript": "^4.5.4",
-    "unocss": "^0.30.12",
     "vite": "^2.9.0",
-    "vue-tsc": "^0.29.8"
+    "vite-plugin-windicss": "^1.8.3",
+    "vue-tsc": "^0.29.8",
+    "windicss": "^3.5.1"
   },
   "eslintConfig": {
     "extends": "@ryanpromax"
