fix: 引入vite-plugin-pages; 修复刷新页面404问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,11 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
+    "jsx": "preserve",
+    "types": [
+      "vite/client",
+      "vite-plugin-pages/client"
+    ],
     "paths": {
       "@/*": [
         "src/*"
