--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-vite-starter",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "eslint": "^8.12.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
+    "vite-plugin-pages": "^0.22.0",
     "vite-plugin-windicss": "^1.8.3",
     "vue-tsc": "^0.29.8",
     "windicss": "^3.5.1"
