--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
+    "types": [
+      "vite/client",
+      "vite-plugin-pages/client"
+    ],
     "paths": {
       "@/*": [
         "src/*"
