--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-vite-starter",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.4",
     "@vueuse/core": "^8.2.5",
+    "element-plus": "^2.2.5",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -19,12 +21,15 @@
     "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.0",
     "eslint": "^8.12.0",
+    "sass": "^1.52.3",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.8.8",
+    "unplugin-element-plus": "^0.4.0",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.0",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-windicss": "^1.8.3",
-    "vue-tsc": "^0.29.8",
-    "windicss": "^3.5.1"
+    "vue-tsc": "^0.29.8"
   },
   "eslintConfig": {
     "extends": "@ryanpromax"
